# PixelClean

./: .gitignore  BT与GOAP结合方案.md  CMakeLists.txt  CMakeSettings.json  Camera.cpp  Camera.h  DebugLog.h  FilePath.h  GOBT_方案三_CPP实现规划.md  GOBT_解决方案设计.md  GlobalStructural.h  GlobalVariable.cpp  GlobalVariable.h  Info.ini  NPCGOBT_智能升级方案设计.md  NPC行为模式调研分析.md  OPTIMIZATION_ANALYSIS.md  ParticleSystem_Redesign_PlanD_Component.md  PhysicsBlock.ini  PixelClean_Android_Migration_Assessment.md  README.md  VulKanError.txt  application.cpp  application.h  base.h  launch.vs.json  main.cpp  resource.rc  方案E混合驱动移动执行规划.md
Arms/: Arms.cpp  Arms.h  AttackMode.cpp  AttackMode.h  CMakeLists.txt  GIF.cpp  GIF.h  ParticleSystem.cpp  ParticleSystem.h  ParticlesSpecialEffect.cpp  ParticlesSpecialEffect.h
Audio/: AudioAsset.cpp  AudioAsset.h  AudioBus.cpp  AudioBus.h  AudioEngine.cpp  AudioEngine.h  AudioVoice.cpp  AudioVoice.h  CMakeLists.txt  RTPCController.cpp  RTPCController.h  RoomAcoustics.cpp  RoomAcoustics.h  SoundEffect.cpp  SoundEffect.h  SpatialAudio.cpp  SpatialAudio.h  soloud_midi.cpp  soloud_midi.h  tml.h
BlockS/: Block.cpp  Block.h  BlockS.cpp  BlockS.h  CMakeLists.txt  PixelS.h  PixelTextureS.cpp  PixelTextureS.h  PixelTool.py
Camera/: Camera.cpp  Camera.h  CameraTransform.cpp  CameraTransform.h  FPSControl3D.cpp  FPSControl3D.h  FixedControl.cpp  FixedControl.h  FollowControl2D.cpp  FollowControl2D.h  FreeControl2D.cpp  FreeControl2D.h  IControlStrategy.h  IProjectionStrategy.h  OrthographicProjection.cpp  OrthographicProjection.h  PerspectiveProjection.cpp  PerspectiveProjection.h
Character/: CMakeLists.txt  Crowd.cpp  Crowd.h  DamagePrompt.cpp  DamagePrompt.h  GamePlayer.cpp  GamePlayer.h  MovementComponent.cpp  MovementComponent.h  NPC.cpp  NPC.h  NPCGOBT.cpp  NPCGOBT.h  UVDynamicDiagram.cpp  UVDynamicDiagram.h
Environment/Soloud/: CMakeLists.txt
Environment/Soloud/src/core/: soloud_file.cpp
Environment/WaveFunctionCollapse/: CMakeLists.txt
Environment/WaveFunctionCollapse/include/: direction.hpp  overlapping_wfc.hpp  propagator.hpp  tiling_wfc.hpp  wave.hpp  wfc.hpp
Environment/WaveFunctionCollapse/include/utils/: array2D.hpp  array3D.hpp
Environment/WaveFunctionCollapse/src/: propagator.cpp  wave.cpp  wfc.cpp
Environment/glfw/: CMakeLists.txt
Environment/glfw/src/: internal.h
Environment/imgui/: CMakeLists.txt
Environment/libevent/: CMakeLists.txt  arc4random.c
Environment/spdlog/: CMakeLists.txt
Environment/zlib/: CMakeLists.txt  deflate.c  infback.c
GOBT/: CMakeLists.txt
GOBT/gobot/bt/: BTNode.hpp  CompositeNode.hpp  DecoratorNode.hpp  GoalSwitchDecorator.hpp  LeafNode.hpp  SelectorNode.hpp  SequenceNode.hpp
GOBT/gobot/builder/: TreeBuilder.hpp
GOBT/gobot/core/: Action.hpp  Goal.hpp  Status.hpp  Types.hpp  WorldState.hpp
GOBT/gobot/executor/: BTExecutor.hpp
GOBT/gobot/infra/: Context.hpp  EventBus.hpp  SharedBlackboard.hpp
GOBT/gobot/operational/: FailureReportNode.hpp  GoalConditionNode.hpp  GoalSucceededCondition.hpp  LayerBridgeNode.hpp  OperationalActionNode.hpp  StatePreconditionNode.hpp
GOBT/gobot/strategic/: GoalManager.hpp  StrategicGoalNode.hpp  StrategicPlanner.hpp
GOBT/gobot/tactical/: SubtreeLibrary.hpp  SubtreeReferenceNode.hpp  TacticalDecomposer.hpp  TacticalSubgoalNode.hpp
GameMods/: CMakeLists.txt  Configuration.h  GameMods.h  MazeMods.cpp  MazeMods.h  MouseEventBase.h  PathfindingDecorator.h  UnlimitednessMap.cpp  UnlimitednessMap.h  UnlimitednessMapMods.cpp  UnlimitednessMapMods.h
GeneralCalculationGPU/: CMakeLists.txt  GPU.cpp  GPU.h  WarfareMist.comp  WarfareMist.spv  comp.spv  compile.bat  lodepng.cpp  shader.comp
ImGui/: GUI.h  ImGuiTexture.cpp  ImGuiTexture.h  Interface.cpp  Interface.h  imgui_impl_vulkan.cpp
InterfaceUI/: CMakeLists.txt  GUI.h  ImGuiTexture.cpp  Interface.cpp  Interface.h
Labyrinth/: CMakeLists.txt  Dungeon.cpp  Dungeon.h  GenerateMaze.cpp  GenerateMaze.h  Labyrinth.cpp  Labyrinth.h  PathfindingDecorator.h  TextureLibrary.cpp  TextureLibrary.h
MyApplication/: .gitignore  gradle.properties  settings.gradle.kts
MyApplication/app/src/main/cpp/: CMakeLists.txt  VulkanApp.cpp  VulkanApp.h  native-lib.cpp
MyApplication/app/src/main/cpp/Platform/: PlatformDetection.h.in
MyApplication/app/src/main/cpp/Platform/Android/: PlatformAndroid.cpp  PlatformAndroid.h
MyApplication/app/src/main/cpp/Platform/Android/glfw_stub/GLFW/: glfw3.h
MyApplication/app/src/main/cpp/shaders/: triangle.vert
NetworkTCP/: CMakeLists.txt  Client.cpp  Client.h  ClientSynchronizeEvents.cpp  ClientSynchronizeEvents.h  EventTypes.h  NetworkLayer.h  ReplicableObject.h  ReplicatedProperty.h  ReplicationManager.cpp  Server.cpp  Server.h  ServerSynchronizeEvents.cpp  ServerSynchronizeEvents.h  Struct.h  StructTCP.h
Opcode/: CMakeLists.txt  Opcode.cpp  Opcode.h  OpcodeFunction.cpp  OpcodeFunction.h
Physics/: CMakeLists.txt  Callback.h  DeBug.h  DestroyMode.cpp  DestroyMode.h  FixedSizeTerrain.cpp  FixedSizeTerrain.h  GridDecorator.h  GridDictionary.h  IndexAnimationGrid.cpp  IndexAnimationGrid.h  MoveTerrain.cpp  MoveTerrain.h  ObjectCollision.cpp  ObjectCollision.h  ObjectDecorator.h  PhysicsCalculate.cpp  PhysicsCalculate.h  (+5 more)
Tool/: JPS.h  (+23 more)
Vulkan/: CMakeLists.txt  Window.cpp  Window.h  buffer.cpp  buffer.h  commandBuffer.cpp  commandBuffer.h  commandPool.cpp  commandPool.h  description.h  descriptorPool.cpp  descriptorPool.h  descriptorSet.cpp  descriptorSet.h  descriptorSetLayout.cpp  descriptorSetLayout.h  device.cpp  device.h  fence.cpp  fence.h  image.cpp  image.h  instance.cpp  instance.h  pipeline.cpp  pipeline.h  renderPass.cpp  renderPass.h  sampler.cpp  sampler.h  semaphore.cpp  semaphore.h  shader.cpp  shader.h  swapChain.cpp  swapChain.h  windowSurface.cpp  windowSurface.h
VulkanTool/: AuxiliaryVision.cpp  AuxiliaryVision.h  CMakeLists.txt  Calculate.cpp  Calculate.h  CreatePipeline.cpp  CreatePipeline.h  PipelineS.cpp  PipelineS.h  PixelTexture.cpp  PixelTexture.h  ShaderTexture.cpp  ShaderTexture.h  TextureLibrary.cpp  TextureLibrary.h  VisualEffect.cpp  VisualEffect.h  texture.cpp  texture.h
(+190 files in other folders)
